kubectl-deployments/traefik/openwebui-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: openwebui
spec:
  redirectScheme:
    scheme: https
    permanent: true
