kubectl-deployments/traefik/traefik-openwebui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-openwebui
  namespace: kube-system
  labels:
    app.kubernetes.io/name: traefik
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.243
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
  ports:
    - name: web
      port: 80
      targetPort: web
    - name: websecure
      port: 443
      targetPort: websecure
