kubectl-deployments/traefik/openwebui-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openwebui
  namespace: openwebui
  annotations:
    kubernetes.io/ingress.class: traefik-openwebui
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`openwebui.local`)
      kind: Rule
      services:
        - name: open-webui
          port: 80
          loadBalancerName: traefik-openwebui
      middlewares:
        - name: redirect-https
  tls:
    secretName: openwebui-local-tls
