kubectl-deployments/traefik/traefik-ceph-dashboard-ingress.yml
# HTTP: catch and redirect to HTTPS
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ceph-dashboard-http
  namespace: rook-ceph
spec:
  entryPoints: ["web"]
  routes:
    - match: Host(`ceph.seadogger-homelab`)
      kind: Rule
      services:
        - name: rook-ceph-mgr-dashboard
          port: 7000

---
# HTTPS: real route with TLS
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ceph-dashboard-https
  namespace: rook-ceph
spec:
  entryPoints: ["websecure"]
  routes:
    - match: Host(`ceph.seadogger-homelab`)
      kind: Rule
      services:
        - name: rook-ceph-mgr-dashboard
          port: 7000
  tls:
    secretName: ceph-local-tls
