kubectl-deployments/traefik/traefik-jellyfin-ingress.yml
# HTTP: catch & redirect to HTTPS
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-http
  namespace: jellyfin
spec:
  entryPoints: ["web"]
  routes:
    - match: Host(`jellyfin.seadogger-homelab`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: jellyfin
          port: 8096

---
# HTTPS: real route with TLS
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-https
  namespace: jellyfin
spec:
  entryPoints: ["websecure"]
  routes:
    - match: Host(`jellyfin.seadogger-homelab`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: jellyfin-local-tls
