kubectl-deployments/traefik/traefik-nextcloud-ingress.yml
# HTTP: catch and redirect to HTTPS
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-http
  namespace: nextcloud
spec:
  entryPoints: ["web"]
  routes:
    - match: Host(`nextcloud.seadogger-homelab`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080

---
# HTTPS: real route with TLS
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-https
  namespace: nextcloud
spec:
  entryPoints: ["websecure"]
  routes:
    - match: Host(`nextcloud.seadogger-homelab`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
  tls:
    secretName: nextcloud-local-tls
